@startuml
!theme plain
skinparam shadowing false
skinparam packageStyle rectangle

class UserAccount {
  user_id: UUID
  email: str?
  phone: str?
  org_id: str?
  status: active|blocked|deleted
  created_at: datetime
  updated_at: datetime
  version: int
  last_login_at: datetime?
  blocked_at: datetime?
  status_reason: str?
  roles: set[Role]
}

class Credential {
  credential_id: UUID
  type: password|oauth
  secret_hash: str?
  provider: str?
  provider_user_id: str?
  created_at: datetime
  updated_at: datetime
  last_used_at: datetime?
  password_changed_at: datetime?
  failed_attempts: int
  locked_until: datetime?
}

class Session {
  token_id: UUID
  user_id: UUID
  created_at: datetime
  updated_at: datetime
  expires_at: datetime
  revoked_at: datetime?
  revoke_reason: str?
  ip_address: str?
  user_agent: str?
}

class Role {
  name: str
}

UserAccount "1" o-- "1..*" Credential
UserAccount "1" o-- "0..*" Session
UserAccount "1" o-- "0..*" Role
@enduml
